risteys: fix text alignment in data source table

--- a/risteys_elixir/assets/css/tailwind.css
+++ b/risteys_elixir/assets/css/tailwind.css
@@ -234,10 +234,7 @@ td {
     @apply py-1;
     @apply px-4;
 }
-tbody td:nth-child(n + 2) {
-    text-align: right;
-    font-variant-numeric: tabular-nums;
-}
+
 thead {
     @apply italic;
     @apply border-t;
@@ -256,6 +253,10 @@ thead {
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     @apply bg-grey-lightest;
+}
+.tables tbody td:nth-child(n + 2) {
+    text-align: right;
+    font-variant-numeric: tabular-nums;
 }
 
 .filters .title {
